<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biege"
    tools:context=".LoginActivity2">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="24dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="serif"
        android:text="@string/stores_medical_records"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/enter_your_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:background="@drawable/beige"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"
        android:background="@drawable/beige"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/beige"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/blue"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/by"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="@id/signin"
        app:layout_constraintStart_toStartOf="@id/signin"
        app:layout_constraintTop_toBottomOf="@+id/signin" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/creative_collective"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@id/text1" />

</androidx.constraintlayout.widget.ConstraintLayout>