<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biege"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="Add details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/disease1"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/beige"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/disease"
        android:inputType="text"
        android:paddingStart="30dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
    <EditText
        android:id="@+id/medicine1"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/beige"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/medicine"
        android:inputType="text"
        android:paddingStart="30dp"
        android:layout_marginHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="@+id/disease1"
        app:layout_constraintStart_toStartOf="@+id/disease1"
        app:layout_constraintTop_toBottomOf="@+id/disease1" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue"
        android:paddingHorizontal="50dp"
        android:paddingVertical="15dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/medicine1"
        app:layout_constraintStart_toStartOf="@+id/medicine1"
        app:layout_constraintTop_toBottomOf="@+id/medicine1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>